reverted to target

--- a/package.json
+++ b/package.json
@@ -12,5 +12,5 @@
     "postcss-cssnext": "^2.9.0",
     "postcss-partial-import": "^3.1.1"
   },
-  "author": "Ray Villalobos",
+  "author": "Ray Villalobos"
 }
